<resources>
    <string name="app_name">android</string>
    <string name="textVersion">Verção 0.22.05</string>

    <string name="textGreet">Bem-vindo ao Pet Connect</string>
    <string name="textRegister">Cadastrar-se</string>
    <string name="textLogIn">Entrar</string>

    <string name="textCreate">Criar conta</string>
    <string name="textBtnCreate">Cadastrar</string>
    <string name="textBackCreate">Já tem uma conta?</string>

    <string name="textInputUser">Digite um nome de usuário</string>
    <string name="textInputName">Digite um nome completo</string>
    <string name="textInputEmail">Digite um email válido</string>
    <string name="textInputPassword">Digite uma senha</string>
    <string name="textInputPasswordRepeat">Repita a senha para confirmação</string>

    <string name="textLogin">Logar</string>
    <string name="textBackLogin">Não tem uma conta?</string>

    <string name="textForgetPassword">Esqueceu a senha?</string>
    <string name="textLinkForgetPassword">Recuperar</string>

    <string name="textTitleProfile">Perfil</string>
    <string name="erro_profile">Informação não encontarda</string>

    <string name="textUseField">Usuário:</string>
    <string name="textNameField">Nome:</string>
    <string name="textEmailField">E-mail:</string>
    <string name="textPasswordField">Senha:</string>
    <string name="textLogOutField">Sair da Conta</string>

    <string name="textUsers">Gerenciar Usuários</string>
    <string name="textInputSearch">Pesquisar Usuário...</string>
    <string name="textAddUsers">Adicionar novo Usuário</string>

    <string name="textUpdade">Atualizar Usuário</string>
    <string name="textBtnUpdate">Atualizar</string>
    <string name="textAdiminUpdate">Este Usuário é admin?</string>

    <string name="textAnimalCreate">Cadastrar Pet</string>
    <string name="textInputAnimalName">Digite o nome do seu pet</string>
    <string name="textInputAnimalAge">Digite a Idade do seu pet</string>
    <string name="textAnimalSpecies">Digite a espécie do seu pet</string>
    <string name="textAnimalGender">Digite o gênero do seu pet</string>

    <string name="error_empty_response">O servidor retornou uma resposta vazia.</string>
    <string name="error_token_not_found">Token não localizado.</string>

    <string name="error_id_pet_not_found">Id do pet não localizado.</string>
    <string name="error_pet_name_required">Informe o nome do pet.</string>
    <string name="error_pet_age_required">Informe a idade do pet.</string>
    <string name="error_pet_species_required">Informe a especie do pet.</string>
    <string name="error_pet_gender_required">Informe o gênero do pet.</string>

    <string name="error_id_user_not_found">Id do usuario para editar não localizado.</string>
    <string name="error_user_user_required">Informe o usuário.</string>
    <string name="error_user_name_required">Informe o nome completo.</string>
    <string name="error_user_email_required">Informe o email.</string>
    <string name="error_user_email_format_required">Fomato incorreto de email, adicione @ e .com.</string>
    <string name="error_user_password_required">Informe a senha.</string>
    <string name="textAnimals">Gerenciamento de Pets</string>
    <string name="textAddAnimals">Adicionar novo Pet</string>
    <string name="textAnimalUpdate">Atualizar Pet</string>
    <string name="tvAdmin">Admin</string>


</resources>
