<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".presentation.ui.LoginActivity">

    <TextView
        android:id="@+id/linkCreate_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="65dp"
        android:text="@string/textRegister"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="65dp"
        android:text="@string/textBackLogin"
        android:textColor="@color/blueDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linkCreate_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/blue"
        android:text="@string/textLogIn"
        android:textColor="@color/beige"
        android:textSize="23sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/textLogin"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="334dp"
        android:layout_height="149dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_logo_straight" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="76dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/br_input_orange"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/orange"
                app:srcCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/txUser_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputUser"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/orangeLight" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/br_input_orange"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/orange"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/txPassword_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputPassword"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/orangeLight" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:text="@string/textForgetPassword"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/linkPassword_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/textLinkForgetPassword"
        android:textColor="@color/blueDark"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>