<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".ui.CreateActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/textCreate"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="303dp"
        android:layout_height="104dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/img_logo_straight" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.477">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_blue"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/txUser_create"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputUser"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_blue"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/txName_create"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputName"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_blue"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_email" />

            <EditText
                android:id="@+id/txEmail_create"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputEmail"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_blue"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/txPassword_create"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputPassword"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_blue"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/txPasswordRepeat_create"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputPasswordRepeat"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister_create"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/orange"
        android:text="@string/textBtnCreate"
        android:textColor="@color/beige"
        android:textSize="23sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="30dp"
        android:text="@string/textBackCreate"
        android:textColor="@color/blueDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linkLogin_create"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/linkLogin_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="30dp"
        android:text="@string/textLogIn"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>