<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.update.UpdateActivity">

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/orange"
        android:text="@string/textBtnUpdate"
        android:textColor="@color/beige"
        android:textSize="23sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.433">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_blue"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView59"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/txUser_update"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputUser"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_blue"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5d"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/txName_update"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputName"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_blue"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5e"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_email" />

            <EditText
                android:id="@+id/txEmail_update"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputEmail"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_blue"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5cx"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/txPassword_update"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputPassword"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_input_blue"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5f"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="10dp"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/txPasswordRepeat_update"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/textInputPasswordRepeat"
                android:inputType="text"
                android:textColor="@color/orange"
                android:textColorHint="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:padding="7dp"
                android:scaleType="centerCrop"
                android:tint="@color/blueDark"
                app:srcCompat="@drawable/ic_admin" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/textAdiminUpdate"
                android:textColor="@color/blue"
                android:textSize="23sp" />

            <Switch
                android:id="@+id/swAdmin_update"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:trackTint="@color/orange"
                app:thumbTint="@color/blueDark" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textUpdade"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="271dp"
        android:layout_height="87dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo_straight" />

    <ImageButton
        android:id="@+id/btnBack_update"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_input_blue"
        android:padding="7dp"
        android:scaleType="centerCrop"
        android:tint="@color/blueDark"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />
</androidx.constraintlayout.widget.ConstraintLayout>